--- a/Keeper Blocker.safariextension/keeper_global.html
+++ b/Keeper Blocker.safariextension/keeper_global.html
@@ -8,7 +8,7 @@ function performCommand(event)
 
 {
 
-    // You should always check the command.
+    // Check the command.
     if (event.message != "close-tab")
         return;
  
